<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".funcMenu">

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="580dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sChooseSettings"
            android:layout_marginBottom="15sp"
            android:textColor="#000702"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/nameGamer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sNameGamer"
            android:inputType="textPersonName"
            android:autofillHints=""
            tools:targetApi="o" />

        <RadioGroup
            android:id="@+id/radios"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioWarrior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sKnight" />

            <RadioButton
                android:id="@+id/radioArcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sArcher" />

            <RadioButton
                android:id="@+id/radioMag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sMag" />
        </RadioGroup>

        <Button
            android:id="@+id/bNext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/sNext" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>